プログラムの追加１
Block.cppのプログラムの追加

--- a/tetoriss/tetoriss.vcxproj
+++ b/tetoriss/tetoriss.vcxproj
@@ -20,6 +20,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="AppMain.cpp" />
+    <ClCompile Include="Block.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Block.h" />
@@ -29,6 +30,7 @@
     <ClInclude Include="InputControl.h" />
     <ClInclude Include="RankingScene.h" />
     <ClInclude Include="SceneManager.h" />
+    <ClInclude Include="TitleScene.h" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>16.0</VCProjectVersion>
