--- a/tetoriss/tetoriss.vcxproj
+++ b/tetoriss/tetoriss.vcxproj
@@ -21,6 +21,7 @@
   <ItemGroup>
     <ClCompile Include="AppMain.cpp" />
     <ClCompile Include="Block.cpp" />
+    <ClCompile Include="EndScene.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Block.h" />
