--- a/tetoriss/tetoriss.vcxproj.filters
+++ b/tetoriss/tetoriss.vcxproj.filters
@@ -21,6 +21,9 @@
     <ClCompile Include="Block.cpp">
       <Filter>ソース ファイル</Filter>
     </ClCompile>
+    <ClCompile Include="EndScene.cpp">
+      <Filter>ソース ファイル</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Block.h">
