--- a/tetoriss/tetoriss.vcxproj
+++ b/tetoriss/tetoriss.vcxproj
@@ -22,6 +22,10 @@
     <ClCompile Include="AppMain.cpp" />
     <ClCompile Include="Block.cpp" />
     <ClCompile Include="EndScene.cpp" />
+    <ClCompile Include="FreamControl.cpp" />
+    <ClCompile Include="GameMainScene.cpp" />
+    <ClCompile Include="InputControl.cpp" />
+    <ClCompile Include="RankingScene.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Block.h" />
