--- a/tetoriss/tetoriss.vcxproj
+++ b/tetoriss/tetoriss.vcxproj
@@ -26,6 +26,8 @@
     <ClCompile Include="GameMainScene.cpp" />
     <ClCompile Include="InputControl.cpp" />
     <ClCompile Include="RankingScene.cpp" />
+    <ClCompile Include="SceneManager.cpp" />
+    <ClCompile Include="TitleScene.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Block.h" />
